[package]
name        = "x-for-you-bench"
version     = "0.1.0"
edition     = "2021"
description = "Criterion benchmarks for the X For You feed algorithm"
autobenches = false

[lib]
name = "x_bench_lib"
path = "benches/lib.rs"

[[bench]]
name    = "scoring_bench"
harness = false

[[bench]]
name    = "pipeline_bench"
harness = false

[[bench]]
name    = "thunder_bench"
harness = false

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dashmap   = "5"
# FIX: Enabled the "small_rng" feature so SmallRng can be compiled inside lib.rs
rand      = { version = "0.8", features = ["small_rng"] }

[profile.bench]
opt-level = 3
lto       = "thin"
codegen-units = 1
